@@ -183,6 +183,10 @@ app_pane_login_PasswordConfirmRegisterlabel=PW Bestätigen:
 app_pane_login_MailRegisterLabel=Mail:
 app_pane_login_LoginButton_Login=Anmelden
 app_pane_login_LoginButton_Register=Registrieren
+app_pane_register_tooltip_name=Mindestens 3 Zeichen
+app_pane_register_tooltip_pw=Mindestens 5 Zeichen
+app_pane_register_tooltip_pwconfirm=Muss dem Passwort entsprechen
+app_pane_register_tooltip_mail=Muss eine valide Mailadresse beinhalten
 
 app_pane_confirm_close_headline=BEENDEN
 app_pane_confirm_close_message=Wollen Sie die Anwendung wirklich beenden?
