@@ -183,6 +183,10 @@ app_pane_login_PasswordConfirmRegisterlabel=PW confirm:
 app_pane_login_MailRegisterLabel=Mail:
 app_pane_login_LoginButton_Login=Login
 app_pane_login_LoginButton_Register=Register
+app_pane_register_tooltip_name=Needs to be at least 3 characters long
+app_pane_register_tooltip_pw=At least 5 characters
+app_pane_register_tooltip_pwconfirm=Needs to match password
+app_pane_register_tooltip_mail=Valid mail adress
 
 app_pane_confirm_close_headline=SHUTDOWN
 app_pane_confirm_close_message=Would you really like to close C3?
