@@ -59,12 +59,12 @@
          </children>
       </GridPane>
       <ComboBox fx:id="cbCharChooser" layoutX="203.0" layoutY="162.0" onAction="#handleCharSelection" onShowing="#handleOpenCharList" prefHeight="23.0" prefWidth="392.0" stylesheets="@../styles/MainFrameStyle.css" />
-    <Button id="buttonYes" fx:id="buttonLogout" alignment="CENTER_RIGHT" layoutX="540.0" layoutY="439.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLogoutButtonClick" onMouseEntered="#handleLogoutButtonHoverEnter" onMouseExited="#handleLogoutButtonHoverExit" prefWidth="140.0" styleClass="contentButton" text="Logout">
+    <Button id="buttonYes" fx:id="buttonLogout" alignment="CENTER_RIGHT" defaultButton="true" layoutX="540.0" layoutY="439.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleLogoutButtonClick" onMouseEntered="#handleLogoutButtonHoverEnter" onMouseExited="#handleLogoutButtonHoverExit" prefWidth="140.0" styleClass="contentButton" text="Logout">
       <stylesheets>
         <URL value="@../styles/MainFrameStyle.css" />
       </stylesheets>
     </Button>
-    <Button id="buttonNo" fx:id="buttonCancel" alignment="CENTER_RIGHT" layoutX="689.0" layoutY="439.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleCancelButtonClick" onMouseEntered="#handleCancelButtonHoverEnter" onMouseExited="#handleCancelButtonHoverExit" prefWidth="140.0" styleClass="contentButton" text="Cancel">
+    <Button id="buttonNo" fx:id="buttonCancel" alignment="CENTER_RIGHT" cancelButton="true" layoutX="689.0" layoutY="439.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#handleCancelButtonClick" onMouseEntered="#handleCancelButtonHoverEnter" onMouseExited="#handleCancelButtonHoverExit" prefWidth="140.0" styleClass="contentButton" text="Cancel">
       <stylesheets>
         <URL value="@../styles/MainFrameStyle.css" />
       </stylesheets>
